changed from domcontentloaded to unsubscribe

--- a/popup.html
+++ b/popup.html
@@ -1,11 +1,13 @@
 <!doctype html>
 <html>
   <head>
-    <title>GTmetrix Analyzer</title>
-    <script src="popup.js"></script>
+    <title>Example App!</title>
+     <link rel="stylesheet" type="text/css" href="./css/application.css">
   </head>
   <body>
-    <h1>GTmetrix Analyzer</h1>
-    <button id="checkPage">Check this page now!</button>
+    <h1>Example App</h1>
+    <main id="root">
+    </main>
+    <script src="lib/bundle.js"></script>
   </body>
 </html>
