--- a/popup.html
+++ b/popup.html
@@ -7,6 +7,6 @@
   <body>
     <main id="root">
     </main>
-    <script src="lib/bundle.js"></script>
+    <script src="lib/indexEntry.js"></script>
   </body>
 </html>
