--- a/popup.html
+++ b/popup.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Example App!</title>
-     <link rel="stylesheet" type="text/css" href="./css/application.css">
+     <link rel="stylesheet" type="text/css" href="./css/application.scss">
   </head>
   <body>
     <main id="root">
