made basic skeleton for feed page

--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Example App!</title>
+    <title>Fantasy Hype Train</title>
   </head>
   <body>
     <main id="root">
